Все страницы сделаны. корректировки внесены

--- a/product-card.html
+++ b/product-card.html
@@ -8,6 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/jquery-ui.css">
         <link rel="stylesheet" href="css/jquery-ui.structure.css">
+        <link rel="stylesheet" href="css/owl.carousel.css">
+        <link rel="stylesheet" href="css/owl.theme.css">
+        <link rel="stylesheet" href="css/owl.transitions.css">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
@@ -204,43 +207,144 @@
                     <!-- Конец поиска -->
                 </div>
                 <!-- Конец хлебных крошек и поиска -->
-                <h1>Заглушки: Эллиптические, Фланцевые</h1>
-                <!-- Страница калькуляторов -->
-                <div class="calculators">
-                    <div id="tabs">
-                      <ul>
-                        <li><a href="#tabs-1">Расчет массы трубы</a></li>
-                        <li><a href="#tabs-2">Нормы загрузки в вагон</a></li>
-                        <li><a href="#tabs-3">Масса металлопроката</a></li>
-                      </ul>
-                      <div id="tabs-1">
-                        <div class="download-calc clearfix">
-                            <img style="float: left; margin-right: 20px;" src="img/for-tab.jpg" alt="" class="">
-                            <p style="margin-top: 0px;">
-                                Калькулятор для расчета массы труб позволяет расчитывать массу:<br>
-                                круглых труб, прямоугольных труб, квадратных труб.
-                            </p>
-                            <a href="" class="download__btn">Скачать</a>
+                <!-- Карта товара -->
+                <div class="product-card clearfix">
+                    <div class="photo-gallery">
+                        <h1>Заголовок h1</h1>
+                        <div id="sync1" class="owl-carousel">
+                          <div class="item">
+                             <img src="img/zaglushka.jpg" alt=""> 
+                          </div>
+                          <div class="item">
+                             <img src="img/zaglushka.jpg" alt=""> 
+                          </div>
+                          <div class="item">
+                             <img src="img/zaglushka.jpg" alt=""> 
+                          </div>
+                          <div class="item">
+                             <img src="img/zaglushka.jpg" alt=""> 
+                          </div>
                         </div>
-                        <p>
-                            Версия 2.0.4.0. дата 06.03.2003, размер файла 200 kB - упакован в Zip.<br>
-                            Программа не требует инсталляции.<br>
-                            Пользователь вводит тип трубы, материал, наружный диаметр (или размеры сторон для прямоугольных), толщину стенки.<br>
-                            В списке материалов - основные металлы используемые для изготовления труб - углеродистая сталь, нержавеющие стали (20 марок), <br>дюралюминий, титан, медь и др. материалы.<br>
-                            Нержавеющие стали расписаны по маркам (12Х18Н10Т, 12Х18Н12Т и др.)<br>
-                            Расчетная масса трубы с размерами по ГОСТу точно соответствует значениям по ГОСТ 8732, ГОСТ 8734, ГОСТ 8639, ГОСТ 8645.
-                        </p>
-                      </div>
-                      <div id="tabs-2">
-                        <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
-                      </div>
-                      <div id="tabs-3">
-                        <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
-                        <p>Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.</p>
-                      </div>
-                    </div>    
+                        <div id="sync2" class="owl-carousel">
+                          <div class="item">
+                             <img src="img/zaglushka.jpg" alt=""> 
+                          </div>
+                          <div class="item">
+                             <img src="img/zaglushka.jpg" alt=""> 
+                          </div>
+                          <div class="item">
+                             <img src="img/zaglushka.jpg" alt=""> 
+                          </div>
+                          <div class="item">
+                             <img src="img/zaglushka.jpg" alt=""> 
+                          </div>
+                        </div>
+                        <div class="product-price">
+                            Цена: 
+                            <span class="value">1200</span> руб.
+                        </div>
+                    </div>
+                    <div class="form-req">
+                        <div class="title">Оставьте заявку онлайн</div>
+                        <div class="right-form">
+                            <form action="">
+                                <input type="text" class="name__field text__field" placeholder="Имя*" required>
+                                <input type="email" class="email__field text__field" placeholder="E-mail">
+                                <br>
+                                <input type="tel" class="phone__field text__field" placeholder="Телефон*" required>
+                                <button class="get__req__btn">Заявка/ Реквизиты**</button>
+                                <textarea name="" id="" class="comments__area text__area" placeholder="Комментарий"></textarea>
+                                <p>
+                                    * Поля обязательные для заполнения<br>
+                                    ** Прикрепите заявку и свои реквизиты - и мы сразу сможем выставить Вам счет. Размер файла не более 5 Mb.
+                                </p>
+                                <button class="send__form__btn orange__btn">Отправить</button>
+                            </form>
+                        </div>                        
+                    </div>
+                    <div class="clearfix"></div>
+                    <!-- Заголовок текст -->
+                    <h2>Заголовок h2</h2>
+                    <p>
+                        ООО «МеталлоЦентр Титан» - Основным направлением компании является оптовая продажа стальных труб. Мы поставляем продукцию: труба водогазопроводная, электросварная, горячедеформированная, холоднодеформированная. Отгрузки производятся со складов в г. Челябинске, г. Екатеринбурге или с завода производителя, на удобных для клиента условиях.
+                    </p>
+                    <a href="" class="order__btn">Заказать</a>
+                    <!-- Конец заголовок текст -->
                 </div>
-                <!-- Конец страницы калькуляторов -->
+                <!-- Конец карты товара -->
+                <!-- Аналогичные товары -->
+                <div class="catalog-items analog-items clearfix">
+                    <h1>Аналогичные товары</h1>
+                    <div class="catalog-item">
+                        <div class="item-photo">
+                            <a href="" class="item__link">
+                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
+                            </a>
+                        </div> 
+                        <div class="item__title">
+                            <a href="" class="item__link">Заглушка</a>
+                        </div>
+                        <div class="item__gost">
+                            ГОСТ 17379-2001
+                        </div>
+                        <div class="item__price">
+                            Цена: 1200 руб.
+                        </div>
+                        <a href="" class="item__btn__order">Заказать</a>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="item-photo">
+                            <a href="" class="item__link">
+                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
+                            </a>
+                        </div> 
+                        <div class="item__title">
+                            <a href="" class="item__link">Заглушка</a>
+                        </div>
+                        <div class="item__gost">
+                            ГОСТ 17379-2001
+                        </div>
+                        <div class="item__price">
+                            Цена: 1200 руб.
+                        </div>
+                        <a href="" class="item__btn__order">Заказать</a>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="item-photo">
+                            <a href="" class="item__link">
+                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
+                            </a>
+                        </div> 
+                        <div class="item__title">
+                            <a href="" class="item__link">Заглушка</a>
+                        </div>
+                        <div class="item__gost">
+                            ГОСТ 17379-2001
+                        </div>
+                        <div class="item__price">
+                            Цена: 1200 руб.
+                        </div>
+                        <a href="" class="item__btn__order">Заказать</a>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="item-photo">
+                            <a href="" class="item__link">
+                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
+                            </a>
+                        </div> 
+                        <div class="item__title">
+                            <a href="" class="item__link">Заглушка</a>
+                        </div>
+                        <div class="item__gost">
+                            ГОСТ 17379-2001
+                        </div>
+                        <div class="item__price">
+                            Цена: 1200 руб.
+                        </div>
+                        <a href="" class="item__btn__order">Заказать</a>
+                    </div>
+                </div>
+                <!-- Конец аналогичных товаров -->
                 <!-- Начало преимущества -->
                 <div class="advantages clearfix">
                     <div class="advantages-title">
@@ -413,6 +517,7 @@
         <a href="#0" class="cd-top"></a>
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="js/vendor/jquery-ui.js"></script>
+        <script src="js/vendor/owl.carousel.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
